--- a/client/src/App.css
+++ b/client/src/App.css
@@ -247,3 +247,13 @@ a {
   
   }
 }
+
+.fadecontent {
+   animation-name: fade;
+   animation-duration: 2s;
+}
+
+@keyframes fade {
+  from{ opacity: 0;}
+  to{opacity:1;}
+}
